# QuantenschaltungenGPUs

./: .pre-commit-config.yaml  README2.md  pyproject.toml  qiskit.py  sim.py  test.JSON  test.ipynb
playground/: qiskit.ipynb  uvtest.py
src/quantenschaltungengpus/: __init__.py  paulimatrizen.py
