[project]
name = "quantenschaltungengpus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alina", email = "akibu06@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pycheck>=0.1",
    "pylatexenc>=2.10",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "qiskit>=2.3.1",
    "qiskit-aer>=0.17.2",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
